--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,6 +7,11 @@
             margin: 0;
             padding: 0;
         }
+        
+        img {
+            border-radius: 35px;
+            box-shadow: 0 0 8px black;
+        }
     </style>
 </head>
 
@@ -18,13 +23,19 @@
                     <img src="<%=products[i]['img']%>" alt="">
                     <h2>
                         <%=products[i]["name"]%>
+                            <%let pId = products[i]["id"]%>
+                                <% if (prices[pId]){%>
+                                    <%=prices[pId]["price"]["1"]%>
+                                        <%=prices[pId]["price"]["1.5"]%>
+                                            <%=prices[pId]["price"]["2"]%>
+                                                <%=prices[pId]["price"]["2.5"]%>
+                                                    <%=prices[pId]["price"]["3"]%>
+                                                        <%}%>
                     </h2>
                 </div>
-                <%}else {%>
-                    <h1>ATTENTION</h1>
+                <%}%>
                     <%}%>
                         <%}%>
-                            <%}%>
 </body>
 
 </html>
