Added partials for index.ejs

--- a/views/partials/product_card.ejs
+++ b/views/partials/product_card.ejs
@@ -12,11 +12,11 @@
             </div>
         </div>
         <div class="weights">
-            <div class="weights_item" data-price="<%=price["price"]["1"]%>">1</div>
-            <div class="weights_item" data-price="<%=price["price"]["1.5"]%>">1.5</div>
-            <div class="weights_item" data-price="<%=price["price"]["2"]%>">2</div>
-            <div class="weights_item" data-price="<%=price["price"]["2.5"]%>">2.5</div>
-            <div class="weights_item" data-price="<%=price["price"]["3"]%>">3</div>
+            <div class="weights_item" data-price="<%=price["price"]["1"]%>">1 кг</div>
+            <div class="weights_item" data-price="<%=price["price"]["1.5"]%>">1.5 кг</div>
+            <div class="weights_item" data-price="<%=price["price"]["2"]%>">2 кг</div>
+            <div class="weights_item" data-price="<%=price["price"]["2.5"]%>">2.5 кг</div>
+            <div class="weights_item" data-price="<%=price["price"]["3"]%>">3 кг</div>
         </div>
         <div class="button-add">
             <div class="btn_add_text cstyle">
