--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,35 +6,28 @@
 
 <body>
     <div class="grid-container">
-        <div class="header">header</div>
+        <div class="header">
+            <%- include("../partials/header.ejs")%>
+        </div>
         <!-- Sweet pies page start-->
         <div class="page-1">
-            <div class="sp_title">Сладкие пироги</div>
-            <div class="sp_content">
-                <%if (products) {%>
-                    <%for(let i=0;i<11;i++) { let tmp_price;%>
-
-                        <%for(let j=0; j<prices.length;j++){%>
-                            <%if(prices[j]["pId"] == products[i]["id"]) {%>
-                                <% tmp_price = prices[j]%>
-                                    <%}%>
-                                        <%}%>
-                                            <%- include( "../partials/product_card.ejs",{product:products[i],price:tmp_price})%>
-                                                <%}%>
-
-                                                    <%}%>
-            </div>
-
+            <%- include("../partials/sweet_pies.ejs")%>
         </div>
         <!-- Sweet pies page end -->
 
         <!-- Vegetable pies page start -->
-        <div class="page-2">page 2</div>
+        <div class="page-2">
+            <%- include("../partials/vegetable_pies.ejs")%>
+        </div>
         <!-- Vegetable pies page end -->
-
         <!-- Hearty pies page start -->
-        <div class="page-3">page 3</div>
+        <div class="page-3">
+            <%- include("../partials/hearty_pies.ejs")%>
+        </div>
         <!-- Hearty pies page end -->
+        <div class="footer">
+            Podval
+        </div>
     </div>
 </body>
 <script type="text/javascript" src="js/product_card_click_handler.js"></script>
