Partials was updated and created (cart & js is new)

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,15 +2,16 @@
     <img src="images/logo.png" alt="" />
     <div class="slogan">Доставим пироги быстро</div>
     <div class='header_menu'>
-        <div class="header_menu_item">
-            Сладкие пироги
+        <div class="header_menu_link">
+            <div class="header_menu_item">
+                <a href="#page-1">Сладкие</a>
+            </div>
+            <div class="header_menu_item">
+                <a href="#page-2">Овощные</a>
+            </div>
+            <div class="header_menu_item">
+                <a href="#page-3"> Сытные</a>
+            </div>
         </div>
-        <div class="header_menu_item">
-            Овощные пироги
-        </div>
-        <div class="header_menu_item">
-            Сытные пироги
-        </div>
-
     </div>
 </div>
