--- a/views/partials/product_card.ejs
+++ b/views/partials/product_card.ejs
@@ -20,7 +20,7 @@
         </div>
         <div class="button-add">
             <div class="btn_add_text cstyle">
-                В корзину
+                Выбрать
             </div>
             <div class="t-price ">Цена:</div>
             <div class="tp-price ">0</div>
