--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,7 +153,7 @@ body {
     border-radius: 15px;
     box-shadow: 0 0 5px whitesmoke;
     padding: 2px 2px 15px 2px;
-    background-color: whitesmoke;
+    background-color: rgba(240, 240, 240, 0.8);
     margin: 5px;
 }
 
