--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
 <div class="logo">
     <img src="images/logo.png" alt="" />
-    <div class="slogan">Доставим пироги быстро</div>
+    <div class="slogan">Служба доставки пирогов</div>
 </div>
