--- a/views/partials/js.ejs
+++ b/views/partials/js.ejs
@@ -1,1 +1,6 @@
-<script type="text/javascript" src="js/productCardHandler.min.js"></script>
+<script type="text/javascript" src="js/pages/index/handlers/button_weight_handler.js"></script>
+<script type="text/javascript" src="js/pages/index/handlers/button_add_to_cart_handler.js"></script>
+<script type="text/javascript" src="js/pages/index/handlers/navbar_click_handler.js"></script>
+<script type="text/javascript" src="js/pages/index/handlers/productCardHandler.min.js"></script>
+<script type="text/javascript" src="js/pages/index/index_handler.js"></script>
+
