Added alert about using cookie & refactored code

--- a/views/partials/index/hearty_pies.ejs
+++ b/views/partials/index/hearty_pies.ejs
@@ -13,7 +13,7 @@
                             <%}%>
 
                                 <%}%>
-                                    <%- include( "../partials/product_card.ejs",{product:products[i],price:tmp_price})%>
+                                    <%- include( "../product_card.ejs",{product:products[i],price:tmp_price})%>
 
                                         <%}%>
                                             <%}%>
