--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -4,7 +4,7 @@
         <div class="navbar_item">
             <a href="#page-1">Сладкие</a>
         </div>
-        <div class="navbar_item">
+        <div class="navbar_item navbar_item_page-2">
             <a href="#page-2">Овощные</a>
         </div>
         <div class="navbar_item">
