--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,22 +13,22 @@
         </div>
         <!-- Sweet pies page start-->
         <div id="page-1" class="page-1">
-            <%- include("../partials/sweet_pies.ejs")%>
+            <%- include("../partials/index/sweet_pies.ejs")%>
         </div>
         <!-- Sweet pies page end -->
         <!-- Vegetable pies page start -->
         <div id="page-2" class="page-2">
-            <%- include("../partials/vegetable_pies.ejs")%>
+            <%- include("../partials/index/vegetable_pies.ejs")%>
         </div>
         <!-- Vegetable pies page end -->
         <!-- Hearty pies page start -->
         <div id="page-3" class="page-3">
-            <%- include("../partials/hearty_pies.ejs")%>
+            <%- include("../partials/index/hearty_pies.ejs")%>
         </div>
         <!-- Hearty pies page end -->
         <%-include('../partials/menu.ejs')%>
     </div>
 </body>
-<%-include("../partials/js.ejs")%>
+<%-include("../partials/index/scripts.ejs")%>
 
 </html>
