--- a/views/partials/index/sweet_pies.ejs
+++ b/views/partials/index/sweet_pies.ejs
@@ -11,7 +11,7 @@
                     <% tmp_price = prices[j]%>
                         <%}%>
                             <%}%>
-                                <%- include( "../partials/product_card.ejs",{product:products[i],price:tmp_price})%>
+                                <%- include( "../product_card.ejs",{product:products[i],price:tmp_price})%>
                                     <%}%>
                                         <%}%>
 </div>
