--- a/views/partials/index/vegetable_pies.ejs
+++ b/views/partials/index/vegetable_pies.ejs
@@ -14,7 +14,7 @@
                             <%}%>
 
                                 <%}%>
-                                    <%- include( "../partials/product_card.ejs",{product:products[i],price:tmp_price})%>
+                                    <%- include( "../product_card.ejs",{product:products[i],price:tmp_price})%>
 
                                         <%}%>
                                             <%}%>
