--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,6 +7,10 @@
 <body>
     <div id="roof"></div>
 
+    <div id="page-4" class="page-4 close">
+        <%- include('../partials/index/basket.ejs')%>
+    </div>
+
     <div class="grid-container">
         <div id="header" class="header">
             <%- include("../partials/header.ejs")%>
