--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -10,6 +10,9 @@
         <div class="navbar_item">
             <a href="#page-3">Сытные</a>
         </div>
+        <div class="navbar_item button_basket">
+            <img src="images/shopping-basket.png" alt="">
+        </div>
     </div>
 
 </div>
