--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,3 +2,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="stylesheet" type="text/css" href="/css/style.css">
 <link rel="stylesheet" type="text/css" href="/css/navbar.css">
+<link rel="stylesheet" type="text/css" href="/css/page-4.css">
+<link rel="stylesheet" type="text/css" href="/css/basket_button.css">
