--- a/views/partials/index/basket.ejs
+++ b/views/partials/index/basket.ejs
@@ -1,8 +1,22 @@
 <div class="basket_info">
-    <div>Cake 1</div>
-    <div>Cake 2</div>
-    <div>Cake 3</div>
-    <div>Cake 4</div>
-    <button class="create_order">Создать заказ</button>
-    <button>Закрыть</button>
+
+    <div class="product_list">
+        <div class="product_list__item ">
+            <div class="elt_remove">
+                <img src="images/quit.png" alt="">
+            </div>
+            <div class="elt_name">Пирог с яблоком и брусникой и с чемто ещё</div>
+            <div class="elt_weight"> 2kg</div>
+            <div class="elt_price">1500</div>
+        </div>
+
+    </div>
+    <div class="total_price">
+        <div>Итого : 55500 р.</div>
+    </div>
+    <button class="b1">Скрыть</button>
+    <button class="b2">Оформить</button>
+
+
+
 </div>
